# ZaswearProjects

./: .gitignore  README.md  index.html  manifest.json  projects.json
api/: portal.js
inventory/: README.md  inventory.db  schema.sql
inventory/markdown/: 3DPrintRadar.md  Carpeta Portfolio · 2026.md  MDMakeIt.md  Salud360.md  Stirling-PDF.md  ZaswearProjects.md  agent-browser.md  aldente.md  argo.md  checkstatus.md  chronos-rss.md  cosasdexela.md  directorscut.md  frontier-radar.md  game-release-rss.md  gamecalendar.md  gis-automation-mono.md  gis-knowledge-hub.md  git-interactive-masterclass.md  instagram-saves-engine.md  kaktus.dev.md  markitdown.md  mijnutrecht.md  nasaexplorer.md  openshift-curso.md  openshorts.md  osiris-Palintir.md  recipe-card-exporter.md  reclip.md  spooty.md  template.md  tengohambre.md  theartnoveau.md  web-to-app.md  weekly-meal-planner.md
inventory/webapp/: Cargo.toml  README.md
inventory/webapp/src/: db.rs  main.rs  routes.rs
inventory/webapp/static/: manifest.json  service-worker.js
inventory/webapp/templates/: base.html.tera  index.html.tera  project.html.tera
portal/: index.html  manifest.json  service-worker.js
scripts/: generate_inventory.py  generate_inventory.sh  sync-projects.mjs
src/pages/: Dashboard.tsx
