[package]
name = "inventory_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tera = "1.19"
dotenvy = "0.15"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
